crates/toml/tests/snapshots/invalid/inline-table/no-close-01.stderr
TOML parse error at line 1, column 4
  |
1 | a={
  |    ^
newlines are unsupported in inline tables, expected nothing

---
TOML parse error at line 1, column 5
  |
1 | a={
  |     ^
unclosed inline table, expected `}`
